# furrctorio

./: Cargo.toml  readme.md
.github/workflows/: rust.yaml  rust.yml
furrctorio_core/: Cargo.toml
furrctorio_core/src/: constants.rs  error.rs  lib.rs  prelude.rs
furrctorio_core/src/model/: context.rs  fmod.rs  mod.rs  modlist.rs  pagination.rs
furrctorio_yaml/: Cargo.toml
furrctorio_yaml/src/model/: config.rs  mod.rs  mod_entry.rs
