[package]
name = "furrctorio_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
keyring = "2.3.3"
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.119", features = ["alloc"] }
sha1 = "0.10.6"
tokio = { version = "1.38.0", features = ["fs", "full", "io-std", "io-util", "num_cpus", "process", "test-util", "tokio-macros", "tracing"] }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
url = { version = "2.5.2", features = ["serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
dotenv = "0.15.0"
